--- a/app/pom.xml
+++ b/app/pom.xml
@@ -197,10 +197,10 @@
                                      This will keep the keystore out of your file so no prying eyes can see.
                                      Also, if you have a ci (Continuous Integration) profile, these values can be
                                      passed in via the build server. -->
-                                    <keystore>${bootstrap.sign.keystore}</keystore>
-                                    <alias>${bootstrap.sign.alias}</alias>
-                                    <storepass>${bootstrap.sign.storepass}</storepass>
-                                    <keypass>${bootstrap.sign.keypass}</keypass>
+                                    <keystore>${sign.keystore}</keystore>
+                                    <alias>${sign.alias}</alias>
+                                    <storepass>${sign.storepass}</storepass>
+                                    <keypass>${sign.keypass}</keypass>
                                     <verbose>true</verbose>
                                 </configuration>
                             </execution>
