--- a/app/pom.xml
+++ b/app/pom.xml
@@ -18,6 +18,7 @@
 
     <properties>
         <abs.version>4.2.0</abs.version>
+        <dagger.version>1.0-SNAPSHOT</dagger.version>
     </properties>
     <dependencies>
         <dependency>
@@ -31,6 +32,8 @@
             <artifactId>gson</artifactId>
             <version>2.1</version>
         </dependency>
+
+        <!--
         <dependency>
             <groupId>com.github.rtyley</groupId>
             <artifactId>roboguice-sherlock</artifactId>
@@ -41,6 +44,7 @@
             <artifactId>roboguice</artifactId>
             <version>2.0</version>
         </dependency>
+        -->
         <dependency>
             <groupId>com.actionbarsherlock</groupId>
             <artifactId>library</artifactId>
@@ -54,11 +58,13 @@
             <type>jar</type>
             <scope>provided</scope>
         </dependency>
+        <!--
         <dependency>
             <groupId>com.github.kevinsawicki</groupId>
             <artifactId>http-request</artifactId>
             <version>2.1</version>
         </dependency>
+        -->
         <dependency>
             <groupId>com.viewpagerindicator</groupId>
             <artifactId>library</artifactId>
@@ -70,11 +76,13 @@
             <artifactId>library</artifactId>
             <version>2.2.0</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>com.github.kevinsawicki</groupId>
             <artifactId>android-pusher</artifactId>
             <version>0.6</version>
         </dependency>
+        -->
         <dependency>
             <groupId>com.github.kevinsawicki</groupId>
             <artifactId>wishlist</artifactId>
@@ -131,6 +139,11 @@
             <artifactId>otto</artifactId>
             <version>1.3.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup</groupId>
+            <artifactId>dagger</artifactId>
+            <version>${dagger.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.littlefluffytoys</groupId>
@@ -160,6 +173,13 @@
                     <source>1.6</source>
                     <target>1.6</target>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.squareup</groupId>
+                        <artifactId>dagger-compiler</artifactId>
+                        <version>${dagger.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
