--- a/proguard.cfg
+++ b/proguard.cfg
@@ -57,3 +57,6 @@
 }
 
 -keepclassmembers class * extends com.actionbarsherlock.ActionBarSherlock { public <init>(...); }
+
+-keep class * extends dagger.internal.Binding
+-keep class * extends dagger.internal.ModuleAdapter
