--- a/app/pom.xml
+++ b/app/pom.xml
@@ -19,7 +19,7 @@
     <properties>
         <abs.version>4.2.0</abs.version>
         <dagger.version>1.0-SNAPSHOT</dagger.version>
-        <gps.version>5</gps.version>
+        <gps.version>7</gps.version>
     </properties>
     <dependencies>
         <dependency>
@@ -34,23 +34,30 @@
             <version>2.1</version>
         </dependency>
 
-        <!--
         <dependency>
-            <groupId>com.github.rtyley</groupId>
-            <artifactId>roboguice-sherlock</artifactId>
-            <version>1.4</version>
+            <groupId>com.android.support</groupId>
+            <artifactId>support-v4</artifactId>
+            <version>13.0.0</version>
         </dependency>
+
         <dependency>
-            <groupId>org.roboguice</groupId>
-            <artifactId>roboguice</artifactId>
-            <version>2.0</version>
+            <groupId>com.google.maps</groupId>
+            <artifactId>android-maps-utils</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <type>apklib</type>
         </dependency>
-        -->
+
         <dependency>
             <groupId>com.actionbarsherlock</groupId>
             <artifactId>library</artifactId>
             <version>${abs.version}</version>
             <type>apklib</type>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.android</groupId>
+                    <artifactId>support-v4</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.actionbarsherlock</groupId>
@@ -58,6 +65,12 @@
             <version>${abs.version}</version>
             <type>jar</type>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.android</groupId>
+                    <artifactId>support-v4</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.viewpagerindicator</groupId>
@@ -141,12 +154,6 @@
         </dependency>
 
         <dependency>
-            <groupId>com.littlefluffytoys</groupId>
-            <artifactId>little-fluffy-location-library</artifactId>
-            <version>11</version>
-        </dependency>
-
-        <dependency>
             <groupId>com.parse</groupId>
             <artifactId>parse</artifactId>
             <version>1.2.3</version>
@@ -162,7 +169,7 @@
         <dependency>
             <groupId>org.robolectric</groupId>
             <artifactId>robolectric</artifactId>
-            <version>2.0-alpha-3-SNAPSHOT</version>
+            <version>2.0</version>
             <scope>test</scope>
         </dependency>
 
