--- a/app/pom.xml
+++ b/app/pom.xml
@@ -35,6 +35,18 @@
         </dependency>
 
         <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-drive</artifactId>
+            <version>v2-rev80-1.15.0-rc</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.api.client</groupId>
+            <artifactId>google-api-client-util</artifactId>
+            <version>1.0.6-alpha</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.android.support</groupId>
             <artifactId>support-v4</artifactId>
             <version>13.0.0</version>
@@ -122,14 +134,6 @@
             <version>4.10</version>
             <scope>test</scope>
         </dependency>
-        <!--
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
-            <version>1.3.RC2</version>
-            <scope>test</scope>
-        </dependency>
-        -->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
@@ -165,6 +169,22 @@
             <classifier>javadoc</classifier>
         </dependency>
 
+       <dependency>
+            <groupId>com.google.http-client</groupId>
+            <artifactId>google-http-client-gson</artifactId>
+            <version>1.13.1-beta</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.httpcomponents</groupId>
+                    <artifactId>httpclient</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>xpp3</groupId>
+                    <artifactId>xpp3</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
         <!-- Make sure this is below the android dependencies -->
         <dependency>
             <groupId>org.robolectric</groupId>
@@ -172,7 +192,6 @@
             <version>2.0</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
     <build>
         <finalName>transittamer-${project.version}</finalName>
