--- a/app/pom.xml
+++ b/app/pom.xml
@@ -35,15 +35,45 @@
         </dependency>
 
         <dependency>
-            <groupId>com.google.apis</groupId>
-            <artifactId>google-api-services-drive</artifactId>
-            <version>v2-rev80-1.15.0-rc</version>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>1.15.0-rc</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>xpp3</artifactId>
+                    <groupId>xpp3</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>httpclient</artifactId>
+                    <groupId>org.apache.httpcomponents</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>junit</artifactId>
+                    <groupId>junit</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>android</artifactId>
+                    <groupId>com.google.android</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
-            <groupId>com.google.api.client</groupId>
-            <artifactId>google-api-client-util</artifactId>
-            <version>1.0.6-alpha</version>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client-android</artifactId>
+            <version>1.15.0-rc</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.android.google-play-services</groupId>
+                    <artifactId>google-play-services</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-drive</artifactId>
+            <version>v2-rev80-1.15.0-rc</version>
         </dependency>
 
         <dependency>
@@ -109,12 +139,12 @@
         <dependency>
             <groupId>com.google.android.analytics</groupId>
             <artifactId>analytics</artifactId>
-            <version>2</version>
+            <version>3</version>
         </dependency>
         <dependency>
             <groupId>com.google.android.admob</groupId>
             <artifactId>admob</artifactId>
-            <version>6.2.1-r8</version>
+            <version>6.4.1-r11</version>
         </dependency>
         <dependency>
             <groupId>com.google.android.gms</groupId>
@@ -155,34 +185,6 @@
             <artifactId>dagger-compiler</artifactId>
             <version>${dagger.version}</version>
             <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.parse</groupId>
-            <artifactId>parse</artifactId>
-            <version>1.2.3</version>
-        </dependency>
-        <dependency>
-            <groupId>com.parse</groupId>
-            <artifactId>parse</artifactId>
-            <version>1.2.3</version>
-            <classifier>javadoc</classifier>
-        </dependency>
-
-       <dependency>
-            <groupId>com.google.http-client</groupId>
-            <artifactId>google-http-client-gson</artifactId>
-            <version>1.13.1-beta</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.apache.httpcomponents</groupId>
-                    <artifactId>httpclient</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>xpp3</groupId>
-                    <artifactId>xpp3</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <!-- Make sure this is below the android dependencies -->
@@ -325,5 +327,12 @@
             <id>ignition-snapshots</id>
             <url>http://nexus.qype.com/content/repositories/snapshots</url>
         </repository>
+
+        <repository>
+            <id>google-releases</id>
+            <name>Google Releases</name>
+            <url>https://oss.sonatype.org/content/repositories/google-releases</url>
+        </repository>
+
     </repositories>
 </project>
