--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -23,6 +23,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
 
     <uses-feature
             android:name="android.hardware.location"
@@ -69,6 +70,25 @@
                 <data android:scheme="schedulelink"/>
             </intent-filter>
         </activity>
+
+        <provider android:name=".sync.ConfigContentProvider"
+                  android:exported="false"
+                  android:authorities="org.nsdev.apps.transittamer.config"
+                  android:icon="@drawable/ic_launcher"
+                  android:label="@string/app_name"
+                  android:enabled="true"
+                  android:syncable="true">
+
+        </provider>
+
+        <service android:name=".sync.SyncService" android:exported="true">
+            <intent-filter>
+                <action android:name="android.content.SyncAdapter"/>
+            </intent-filter>
+            <meta-data android:name="android.content.SyncAdapter"
+                       android:resource="@xml/sync" />
+        </service>
+
 
         <meta-data
                 android:name="com.google.android.maps.v2.API_KEY"
